<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:overScrollMode="always"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/expression"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="48sp"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:singleLine="true"
            android:ellipsize="none"
            android:scrollHorizontally="true" />
    </HorizontalScrollView>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:text=""
        android:textAlignment="textEnd"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
        android:singleLine="true"
        android:ellipsize="none"
        android:scrollHorizontally="true"
        android:overScrollMode="always"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/numbersBtnContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result">

        <Button
            android:id="@+id/btnC"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/clear"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@color/grey"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnAC"
            app:layout_constraintBottom_toTopOf="@+id/btn7" />

        <Button
            android:id="@+id/btnAC"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/all_clear"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@color/grey"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnC"
            app:layout_constraintEnd_toStartOf="@+id/btnOpenBracket"
            app:layout_constraintBottom_toTopOf="@+id/btn8" />

        <Button
            android:id="@+id/btnOpenBracket"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/open_bracket"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@color/grey"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnAC"
            app:layout_constraintEnd_toStartOf="@+id/btnClosedBracket"
            app:layout_constraintBottom_toTopOf="@+id/btn9"/>

        <Button
            android:id="@+id/btnClosedBracket"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/close_bracket"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@color/grey"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnOpenBracket"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnDivide"/>

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/seven"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@color/darkgrey"
            app:layout_constraintTop_toBottomOf="@+id/btnC"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn8"
            app:layout_constraintBottom_toTopOf="@+id/btn4"/>

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/eight"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@color/darkgrey"
            app:layout_constraintTop_toBottomOf="@+id/btnAC"
            app:layout_constraintStart_toEndOf="@+id/btn7"
            app:layout_constraintEnd_toStartOf="@+id/btn9"
            app:layout_constraintBottom_toTopOf="@+id/btn5" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/nine"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@color/darkgrey"
            app:layout_constraintTop_toBottomOf="@+id/btnOpenBracket"
            app:layout_constraintStart_toEndOf="@+id/btn8"
            app:layout_constraintEnd_toStartOf="@+id/btnDivide"
            app:layout_constraintBottom_toTopOf="@+id/btn6" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/divide"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@color/orange"
            app:layout_constraintTop_toBottomOf="@+id/btnClosedBracket"
            app:layout_constraintStart_toEndOf="@+id/btn9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnMultiply" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/four"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@color/darkgrey"
            app:layout_constraintTop_toBottomOf="@+id/btn7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn5"
            app:layout_constraintBottom_toTopOf="@+id/btn1" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/five"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@color/darkgrey"
            app:layout_constraintTop_toBottomOf="@+id/btn8"
            app:layout_constraintStart_toEndOf="@+id/btn4"
            app:layout_constraintEnd_toStartOf="@+id/btn6"
            app:layout_constraintBottom_toTopOf="@+id/btn2" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/six"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@color/darkgrey"
            app:layout_constraintTop_toBottomOf="@+id/btn9"
            app:layout_constraintStart_toEndOf="@+id/btn5"
            app:layout_constraintEnd_toStartOf="@+id/btnMultiply"
            app:layout_constraintBottom_toTopOf="@+id/btn3" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/multiply"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@color/orange"
            app:layout_constraintTop_toBottomOf="@+id/btnDivide"
            app:layout_constraintStart_toEndOf="@+id/btn6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnSubtract" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/one"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@color/darkgrey"
            app:layout_constraintTop_toBottomOf="@+id/btn4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn2"
            app:layout_constraintBottom_toTopOf="@+id/btn0" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/two"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@color/darkgrey"
            app:layout_constraintTop_toBottomOf="@+id/btn5"
            app:layout_constraintStart_toEndOf="@+id/btn1"
            app:layout_constraintEnd_toStartOf="@+id/btn3"
            app:layout_constraintBottom_toTopOf="@+id/btnDot" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/three"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@color/darkgrey"
            app:layout_constraintTop_toBottomOf="@+id/btn6"
            app:layout_constraintStart_toEndOf="@+id/btn2"
            app:layout_constraintEnd_toStartOf="@+id/btnSubtract"
            app:layout_constraintBottom_toTopOf="@+id/btnEquals" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/subtract"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@color/orange"
            app:layout_constraintTop_toBottomOf="@+id/btnMultiply"
            app:layout_constraintStart_toEndOf="@+id/btn3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnAdd" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/zero"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@color/darkgrey"
            app:layout_constraintTop_toBottomOf="@+id/btn1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnDot"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/dot"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@color/darkgrey"
            app:layout_constraintTop_toBottomOf="@+id/btn2"
            app:layout_constraintStart_toEndOf="@+id/btn0"
            app:layout_constraintEnd_toStartOf="@+id/btnEquals"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/equals"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@color/orange"
            app:layout_constraintTop_toBottomOf="@+id/btn3"
            app:layout_constraintStart_toEndOf="@+id/btnDot"
            app:layout_constraintEnd_toStartOf="@+id/btnAdd"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:backgroundTint="@color/orange"
            app:layout_constraintTop_toBottomOf="@+id/btnSubtract"
            app:layout_constraintStart_toEndOf="@+id/btnEquals"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
